@@ -327,4 +327,16 @@ iframe.right {
   cursor: pointer;
 }
 
+img.img-preview {
+  margin: .25em 0;
+}
+
+table#imglist {
+  margin: .5em 0;
+  border-collapse: collapse;
+}
+table#imglist td {
+  padding: 2px 10px 2px 0;
+}
+
 /* vim: set ts=2 sts=2 sw=2 et ai noci: */
