@@ -38,6 +38,7 @@
         <p><label><input type="checkbox" value="1" name="delete"/>Delete this page</label></p>
         {% endif %}
         <p class="extl">You can use HTML and <a href="http://daringfireball.net/projects/markdown/syntax" target="_blank">Markdown</a> for formatting, <a class="int" href="/w/interwiki" target="_blank">interwikis</a> for linking.</p>
+        <p>You can <a href="/w/image/upload" target="_blank">upload images</a> to embed them, or embed <a href="/w/image/list" target="_blank">an existing one</a>.</p>
         <input type="submit" name="Preview" value="Preview"/> or <input type="submit" name="Save" value="Save Changes"/> or <a class="int" href="{{ page.title|pageurl }}">cancel</a>
     </form>
   </div>
